# sapo

./: .gitignore  README.md  pyproject.toml
sapo/: parquet_validator.py  schema_fetcher.py  sqlite_helpers.py  sqlite_schema_to_yaml.py  sqlite_validator.py
tests/: create_parquet_files.py  create_sqlite_databases.py  test_parquet_validator.py  test_sapo.py  test_schema_fetcher.py  test_sqlite_helpers.py  test_sqlite_schema_to_yaml.py  test_sqlite_validator.py
tests/data/: nfl.db  players.parquet
tests/schemas/: nfl_sqlite_schema.yml  players_pyarrow_schema.yml
